# wtftw

./: .gitignore  Cargo.toml
config/: config.rs
core/: Cargo.toml
core/src/: config.rs  handlers.rs  keycodes.rs  layout.rs  util.rs  window_manager.rs  window_system.rs  wtftw.rs
core/src/core/: mod.rs  rational_rect.rs  screen.rs  stack.rs  workspace.rs  workspaces.rs
core/src/layout/: avoid_struts_layout.rs  binary_space_partition.rs  center_layout.rs  full_layout.rs  gap_layout.rs  layout.rs  layout_collection.rs  mirror_layout.rs  mod.rs  no_borders_layout.rs  resizable_tall_layout.rs  with_borders_layout.rs
core/tests/core/: mod.rs  stack.rs  workspace.rs
src/: wtftw.rs
xlib/: Cargo.toml
xlib/src/: xlib_window_system.rs
