[project]

name = "wtftw"
version = "0.4.5"
authors = ["Simon Wollwage"]

[dependencies]
bitflags = "*"
serde_json = "*"
getopts = "*"
log = "*"
libc = "*"
dylib = "*"
simplelog = "*"
zombie = "*"
dirs = "*"
wtftw_core = { path = "core" }

[dependencies.wtftw_xlib]
path = "xlib"

[lib]
name = "wtftw"
path = "core/src/wtftw.rs"

[[bin]]
name = "wtftw"
path = "src/wtftw.rs"
