[project]
name = "wtftw"
version = "0.4.5"
authors = ["Simon Wollwage"]
edition = "2018"

[dependencies]
bitflags = "*"
serde_json = "*"
getopts = "*"
log = "*"
libc = "*"
dylib = "*"
zombie = "*"
dirs = "*"
simplelog = "*"
num = "*"
wtftw_core = { path = "core" }

[dependencies.wtftw_xlib]
path = "xlib"

[lib]
name = "wtftw"
path = "core/src/wtftw.rs"

[[bin]]
name = "wtftw"
path = "src/wtftw.rs"
