[project]

name = "wtftw_xlib"
version = "0.4.0"
authors = ["Simon Wollwage"]
edition = "2018"

[dependencies]
log = "0.4.14"
libc = "0.2.86"
x11 = { version = "2.18.2", features = ["xlib", "xinerama"] }

[dependencies.wtftw_core]
path = "../core"

[lib]
name = "wtftw_xlib"
path = "src/xlib_window_system.rs"
crate-type = ["rlib"]
